Update footer links to clean URLs to fix 404/redirect issues

--- a/index.html
+++ b/index.html
@@ -968,11 +968,12 @@
                             <svg class="w-4 h-4 text-brand-primary group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
                     </div>
-                    <div class="flex flex-wrap gap-4 text-xs text-gray-500 mt-4 justify-center md:justify-start">
-                        <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
-                        <a href="terms.html" class="hover:text-white transition-colors">Terms of Service</a>
-                    </div>
-                    <p class="text-gray-600 text-xs mt-2">© 2026 Lounge Asia. All rights reserved.</p>
+                    <div class="flex flex-wrap items-center justify-center gap-2 text-xs text-gray-500 mt-4">
+          <a href="/privacy" class="transition hover:text-white">Privacy Policy</a>
+          <span class="text-gray-700">•</span>
+          <a href="/terms" class="transition hover:text-white">Terms of Service</a>
+        </div>
+        <p class="mt-4">© 2026 Lounge Asia. All rights reserved. ABN 72 472 785 236</p>
                 </div>
                 
                 <div class="flex gap-6">
